tests/ui/async-await/higher-ranked-auto-trait-8.no_assumptions.stderr
error: higher-ranked lifetime error
  --> $DIR/higher-ranked-auto-trait-8.rs:26:5
   |
LL |     needs_send(use_my_struct(second_struct)); // ERROR
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: could not prove `impl Future<Output = ()>: Send`

error: higher-ranked lifetime error
  --> $DIR/higher-ranked-auto-trait-8.rs:26:5
   |
LL |     needs_send(use_my_struct(second_struct)); // ERROR
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: could not prove `impl Future<Output = ()>: Send`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

